# yakut-native

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DESIGN.md  LICENSE  README.md
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: tests.yml
docs/: DESIGN.md  daemon.hpp  dsdl.hpp  file_server.hpp  monitor.hpp  node_command_client.hpp  pnp_node_id_allocator.hpp  pubsub.hpp  register_client.hpp  rpc.hpp
include/ocvsmd/platform/: defines.hpp  posix_executor_extension.hpp  posix_platform_error.hpp  posix_utils.hpp
include/ocvsmd/platform/bsd/: kqueue_single_threaded_executor.hpp
include/ocvsmd/platform/linux/: epoll_single_threaded_executor.hpp
include/ocvsmd/sdk/: daemon.hpp  execution.hpp  file_server.hpp  node_command_client.hpp
init.d/: ocvsmd  ocvsmd.toml
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp  setup_logging.hpp
src/common/: CMakeLists.txt  common_helpers.hpp  dsdl_helpers.hpp  logging.hpp
src/common/dsdl/ocvsmd/common/ipc/: Route.0.1.dsdl  Route.1.0.dsdl  RouteChannelEnd.0.1.dsdl  RouteChannelEnd.1.0.dsdl  RouteChannelMsg.0.1.dsdl  RouteChannelMsg.1.0.dsdl  RouteConnect.0.1.dsdl  RouteConnect.1.0.dsdl
src/common/dsdl/ocvsmd/common/svc/file_server/: ListRoots.0.1.dsdl  PopRoot.0.1.dsdl  PushRoot.0.1.dsdl
src/common/dsdl/ocvsmd/common/svc/node/: ExecCmdSvcRequest.0.1.dsdl  ExecCmdSvcResponse.0.1.dsdl  UavcanNodeExecCmdReq.0.1.dsdl  UavcanNodeExecCmdRes.0.1.dsdl
src/common/io/: io.cpp  io.hpp  socket_address.cpp  socket_address.hpp
src/common/ipc/: channel.hpp  client_pipe.hpp  client_router.cpp  client_router.hpp  gateway.hpp  ipc_types.hpp  server_router.cpp  server_router.hpp  unix_socket_base.hpp  unix_socket_client.cpp  unix_socket_client.hpp  unix_socket_server.cpp  unix_socket_server.hpp
src/common/ipc/pipe/: client_context.hpp  client_pipe.hpp  net_socket_client.cpp  net_socket_client.hpp  net_socket_server.cpp  net_socket_server.hpp  pipe_types.hpp  server_pipe.hpp  socket_base.cpp  socket_base.hpp  socket_client.cpp  socket_client.hpp  socket_client_base.cpp  socket_client_base.hpp  socket_server.cpp  socket_server.hpp  socket_server_base.cpp  socket_server_base.hpp  unix_socket_base.hpp  unix_socket_client.cpp  unix_socket_client.hpp  unix_socket_server.cpp  unix_socket_server.hpp
src/common/platform/: posix_executor_extension.hpp  posix_utils.hpp
src/common/svc/file_server/: list_roots_spec.hpp  pop_root_spec.hpp  push_root_spec.hpp
src/common/svc/node/: exec_cmd_spec.hpp
src/daemon/: CMakeLists.txt  main.cpp  setup_logging.hpp
src/daemon/engine/: CMakeLists.txt  application.cpp  application.hpp  config.cpp  config.hpp  engine.cpp  engine.hpp  engine_helpers.hpp
src/daemon/engine/cyphal/: any_transport_bag.hpp  can_transport_bag.hpp  file_provider.cpp  file_provider.hpp  transport_helpers.hpp  udp_transport_bag.hpp
src/daemon/engine/platform/: defines.hpp  posix_executor_extension.hpp  posix_platform_error.hpp  single_threaded_executor.hpp
src/daemon/engine/platform/bsd/: kqueue_single_threaded_executor.hpp
src/daemon/engine/platform/can/: can_media.hpp  socketcan.h
src/daemon/engine/platform/debian/: epoll_single_threaded_executor.hpp
src/daemon/engine/platform/linux/: epoll_single_threaded_executor.hpp
src/daemon/engine/platform/udp/: udp.c  udp.h  udp_media.hpp  udp_sockets.hpp
src/daemon/engine/svc/: svc_helpers.hpp
src/daemon/engine/svc/file_server/: list_roots_service.cpp  list_roots_service.hpp  pop_root_service.cpp  pop_root_service.hpp  push_root_service.cpp  push_root_service.hpp  services.cpp  services.hpp
src/daemon/engine/svc/node/: exec_cmd_service.cpp  exec_cmd_service.hpp  services.cpp  services.hpp
src/sdk/: CMakeLists.txt  daemon.cpp  file_server.cpp  node_command_client.cpp  sdk_factory.hpp
src/sdk/svc/: as_sender.hpp
src/sdk/svc/file_server/: list_roots_client.cpp  list_roots_client.hpp  pop_root_client.cpp  pop_root_client.hpp  push_root_client.cpp  push_root_client.hpp
src/sdk/svc/node/: exec_cmd_client.cpp  exec_cmd_client.hpp
test/: CMakeLists.txt  cetl_gtest_helpers.hpp  gtest_printer.hpp  ref_wrapper.hpp  tracking_memory_resource.hpp  unique_ptr_refwrapper.hpp  virtual_time_scheduler.hpp
test/common/: CMakeLists.txt  main.cpp
test/common/io/: test_socket_address.cpp
test/common/ipc/: client_pipe_mock.hpp  gateway_mock.hpp  ipc_gtest_helpers.hpp  server_router_mock.hpp  test_client_router.cpp  test_server_router.cpp
test/common/ipc/pipe/: client_pipe_mock.hpp  server_pipe_mock.hpp
test/daemon/: CMakeLists.txt
test/daemon/engine/: CMakeLists.txt  main.cpp  test_xxx.cpp
test/daemon/engine/cyphal/: svc_sessions_mock.hpp  transport_gtest_helpers.hpp  transport_mock.hpp  unique_ptr_ref_wrapper.hpp
test/daemon/engine/svc/node/: test_exec_cmd_service.cpp
